syntax = "proto3";

// Package Motor is used for defining a Motor node and its properties.
package sonrio.motor.api.v1;

import "motor/v1/request.proto";
import "motor/v1/response.proto";

option go_package = "github.com/sonr-io/sonr/third_party/types/motor/api/v1";

service MotorService {
    rpc Initialize(InitializeRequest) returns (InitializeResponse);
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Query(QueryRequest) returns (QueryResponse);
    rpc Payment(PaymentRequest) returns (PaymentResponse);
    rpc QueryWhoIs(QueryWhoIsRequest) returns (QueryWhoIsResponse);
    rpc CreateSchema(CreateSchemaRequest) returns (CreateSchemaResponse);
    rpc QueryWhatIs(QueryWhatIsRequest) returns (QueryWhatIsResponse);
    rpc QueryWhatIsByCreator(QueryWhatIsByCreatorRequest) returns (QueryWhatIsByCreatorResponse);
    rpc QuerySchema(QuerySchemaRequest) returns (QueryWhatIsResponse);
    rpc QueryWhereIs(QueryWhereIsRequest) returns (QueryWhereIsResponse);
    rpc QueryWhereIsByCreator(QueryWhereIsByCreatorRequest) returns (QueryWhereIsByCreatorResponse);
    rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse);
    rpc UpdateBucket(UpdateBucketRequest) returns (UpdateBucketResponse);
    rpc Stat(StatRequest) returns (StatResponse);
}
