syntax = "proto3";
package sonrio.sonr.registry;

import "registry/who_is.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonr-io/sonr/x/registry/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateWhoIs(MsgCreateWhoIs) returns (MsgCreateWhoIsResponse);
  rpc UpdateWhoIs(MsgUpdateWhoIs) returns (MsgUpdateWhoIsResponse);
  rpc DeleteWhoIs(MsgDeactivateWhoIs) returns (MsgDeactivateWhoIsResponse);
  rpc BuyNameAlias(MsgBuyNameAlias) returns (MsgBuyNameAliasResponse);
  rpc BuyAppAlias(MsgBuyAppAlias) returns (MsgBuyAppAliasResponse);
  rpc TransferNameAlias(MsgTransferNameAlias) returns (MsgTransferNameAliasResponse);
  rpc TransferAppAlias(MsgTransferAppAlias) returns (MsgTransferAppAliasResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateWhoIs {
  string owner = 1;
  bytes did_document = 2;
  WhoIsType whois_type = 3;
}

message MsgCreateWhoIsResponse {
  string did = 1;
  WhoIs who_is = 2;
}

message MsgUpdateWhoIs {
  string owner = 1;
  string did = 2;
  bytes did_document = 3;
}

message MsgUpdateWhoIsResponse {
  string did = 1;
  WhoIs who_is = 2;
}

message MsgDeactivateWhoIs {
  string owner = 1;
  string did = 2;
}

message MsgDeactivateWhoIsResponse {
  bool success = 1;
  string did = 2;
}

message MsgBuyNameAlias {
  string creator = 1;
  string did = 2;
  int32 amount = 3;
  string name = 4;
}

message MsgBuyNameAliasResponse {
  string did = 1;
  WhoIs who_is = 2;
}

message MsgBuyAppAlias {
  string creator = 1;
  string did = 2;
  int32 amount = 3;
  string name = 4;
}

message MsgBuyAppAliasResponse {
  string did = 1;
  WhoIs who_is = 2;
}

message MsgTransferNameAlias {
  string creator = 1;
  string did = 2;
  string alias = 3;
  string recipient = 4;
}

message MsgTransferNameAliasResponse {
  bool success = 1;
  WhoIs who_is = 2;
}

message MsgTransferAppAlias {
  string creator = 1;
  string did = 2;
  string alias = 3;
  string recipient = 4;
}

message MsgTransferAppAliasResponse {
  bool success = 1;
  WhoIs who_is = 2;
}

// this line is used by starport scaffolding # proto/tx/message
